Created template of sidebar within HTML & imported sidebar assets

--- a/index.html
+++ b/index.html
@@ -12,6 +12,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>Hello World!</div>
+    <div class="sidebar">
+        <div class="sidebarlist">
+            <img src="" alt=""><span></span>
+        </div>
+        <div class="sidebarlist">
+            <img src="" alt=""><span></span>
+            <img src="" alt=""><span></span>
+            <img src="" alt=""><span></span>
+            <img src="" alt=""><span></span>
+            <img src="" alt=""><span></span>
+            <img src="" alt=""><span></span>
+        </div>
+        <div class="sidebarlist">
+            <img src="" alt=""><span></span>
+            <img src="" alt=""><span></span>
+            <img src="" alt=""><span></span>
+        </div>
+    </div>
+    <div class="header">
+        header
+    </div>
+    <div class="subheader">
+        subheader
+    </div>
+    <div class="projects">
+        projects
+    </div>
+    <div class="announcements">
+        announcements
+    </div>
+    <div class="trending">
+        trending
+    </div>
 </body>
 </html>
