--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="sidebarlist">
-            <img src="" alt=""><span></span>
+        <div class="sidebarlist" id="dashboard">
+            <img src="assets/sidebar/dashboard.svg" alt="dashboard icon"><span>Dashboard</span>
         </div>
         <div class="sidebarlist">
-            <img src="" alt=""><span></span>
-            <img src="" alt=""><span></span>
-            <img src="" alt=""><span></span>
-            <img src="" alt=""><span></span>
-            <img src="" alt=""><span></span>
-            <img src="" alt=""><span></span>
+            <img src="assets/sidebar/home.svg" alt="home icon"><span>Home</span>
+            <img src="assets/sidebar/profile.svg" alt="profile icon"><span>Profile</span>
+            <img src="assets/sidebar/messages.svg" alt="messages icon"><span>Messages</span>
+            <img src="assets/sidebar/history.svg" alt="history icon"><span>History</span>
+            <img src="assets/sidebar/tasks.svg" alt="tasks icon"><span>Tasks</span>
+            <img src="assets/sidebar/communities.svg" alt="communities icon"><span>Communities</span>
         </div>
         <div class="sidebarlist">
-            <img src="" alt=""><span></span>
-            <img src="" alt=""><span></span>
-            <img src="" alt=""><span></span>
+            <img src="assets/sidebar/settings.svg" alt="settings icon"><span>Settings</span>
+            <img src="assets/sidebar/support.svg" alt="support icon"><span>Support</span>
+            <img src="assets/sidebar/privacy.svg" alt="privacy icon"><span>Privacy</span>
         </div>
     </div>
     <div class="header">
