Styled header & subheader

--- a/index.html
+++ b/index.html
@@ -31,10 +31,19 @@
         </div>
     </div>
     <div class="header">
-        header
+        <div class="search"></div>
+        <img src="assets/header/magnify.svg" alt="search icon">
+        <input type="search">
+        <img src="assets/header/bell-ring.svg" alt="notification icon">
+        <img src="assets/user/images.png" alt="user icon" id="userIconHeader">
+        <span>User 227</span>
     </div>
     <div class="subheader">
-        subheader
+        <img src="assets/user/images.png" alt="user icon" id="userIconSubheader">
+        <div><p>Hi there,</p><p>User 227 (@u227)</p></div>
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
     </div>
     <div class="projects">
         projects
