Finished styling Projects, Announcements, & Trending

--- a/index.html
+++ b/index.html
@@ -46,13 +46,88 @@
         <button>Share</button>
     </div>
     <div class="projects">
-        projects
+        <div class="sectionHeading">Your Projects</div>
+        <div class="projectsSection">
+            <div class="project">
+                <div class="title">Project 1</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vehicula ipsum a arcu cursus.</div>
+                <div class="projectbuttons">
+                    <img src="assets/project actions/star-plus-outline.svg" alt="Favorite"><img src="assets/project actions/eye-check-outline.svg" alt="Watch"><img src="assets/project actions/source-fork.svg" alt="Fork">
+                </div>            </div>
+            <div class="project">
+                <div class="title">Project 2</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vehicula ipsum a arcu cursus.</div>
+                <div class="projectbuttons">
+                    <img src="assets/project actions/star-plus-outline.svg" alt="Favorite"><img src="assets/project actions/eye-check-outline.svg" alt="Watch"><img src="assets/project actions/source-fork.svg" alt="Fork">
+                </div>            </div>
+            <div class="project">
+                <div class="title">Project 3</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vehicula ipsum a arcu cursus.</div>
+                <div class="projectbuttons">
+                    <img src="assets/project actions/star-plus-outline.svg" alt="Favorite"><img src="assets/project actions/eye-check-outline.svg" alt="Watch"><img src="assets/project actions/source-fork.svg" alt="Fork">
+                </div>            </div>
+            <div class="project">
+                <div class="title">Project 4</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vehicula ipsum a arcu cursus.</div>
+                <div class="projectbuttons">
+                    <img src="assets/project actions/star-plus-outline.svg" alt="Favorite"><img src="assets/project actions/eye-check-outline.svg" alt="Watch"><img src="assets/project actions/source-fork.svg" alt="Fork">
+                </div>            </div>
+            <div class="project">
+                <div class="title">Project 5</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vehicula ipsum a arcu cursus.</div>
+                <div class="projectbuttons">
+                    <img src="assets/project actions/star-plus-outline.svg" alt="Favorite"><img src="assets/project actions/eye-check-outline.svg" alt="Watch"><img src="assets/project actions/source-fork.svg" alt="Fork">
+                </div>            </div>
+            <div class="project">
+                <div class="title">Project 6</div>
+                <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vehicula ipsum a arcu cursus.</div>
+                <div class="projectbuttons">
+                    <img src="assets/project actions/star-plus-outline.svg" alt="Favorite"><img src="assets/project actions/eye-check-outline.svg" alt="Watch"><img src="assets/project actions/source-fork.svg" alt="Fork">
+                </div>
+            </div>
+        </div>
     </div>
     <div class="announcements">
-        announcements
+        <div class="sectionHeading">Announcements</div>
+        <div class="announcementsbox">
+            <div class="announcement">
+                <div class="title">Site Maintenance</div>
+                <div class="info">Egestas sed tempus urna et pharetra pharetra massa massa ultricies.</div>
+            </div>
+            <div class="announcement">
+                <div class="title">Community Share Day</div>
+                <div class="info">Egestas sed tempus urna et pharetra pharetra massa massa ultricies.</div>
+            </div>
+            <div class="announcement">
+                <div class="title">Updated Privacy Policy</div>
+                <div class="info">Egestas sed tempus urna et pharetra pharetra massa massa ultricies.</div>
+            </div>
+        </div>
     </div>
     <div class="trending">
-        trending
+        <div class="sectionHeading">Trending</div>
+        <div class="trendingbox">
+            <div class="trend">
+                <img src="assets/user/images.png" alt="">
+                <div class="user">@u103</div>
+                <div>Awesome Project</div>
+            </div>
+            <div class="trend">
+                <img src="assets/user/images.png" alt="">
+                <div class="user">@u702</div>
+                <div>Awesome Project</div>
+            </div>
+            <div class="trend">
+                <img src="assets/user/images.png" alt="">
+                <div class="user">@u930</div>
+                <div>Awesome Project</div>
+            </div>
+            <div class="trend">
+                <img src="assets/user/images.png" alt="">
+                <div class="user">@u747</div>
+                <div>Awesome Project</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
